--- a/ajax.html
+++ b/ajax.html
@@ -15,6 +15,7 @@
 <body>
     <div id="app" style="padding:20px;" >
         <h1>点击按钮触发AJAX</h1>
+        <code>&lt;v-ajax&gt;&lt;/v-ajax&gt;</code>
         <h2>成功</h2>
         <v-ajax
             url="/mock/ok.json"
