--- a/ajax-list.html
+++ b/ajax-list.html
@@ -14,8 +14,9 @@
 </head>
 <body>
     <div id="app" style="padding:20px;" >
-        <a href="./ajax.html">AJAX</a>
-        <a href="./ajax-list.html">AJAX LIST</a>
+        <i-button type="primary" >
+            按钮
+        </i-button>
     </div>
 <script>
 new Vue({
