--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="./ajax-list.html">ajax列表</a></li>
             <li><a href="./layout.html">布局</a></li>
             <li><a href="./login.html">登录</a></li>
+            <li><a href="./chart.html">图表</a></li>
         </ul>
     </div>
 <script>
