--- a/login.html
+++ b/login.html
@@ -34,8 +34,7 @@
                <h6>今天，我们对你的营销效果负责</h6>
                <p>DataSuv专注于多渠道数字营销Saas技术服务提供商</p>
            </div>
-           <form
-               data-form-ajax="true"
+           <v-form
                method="post"
                action="/login"
                id="mainForm"
@@ -105,7 +104,7 @@
                     type="primary"
                     style="width:100%;"
                 >登录</i-button>
-            </form>
+            </v-form>
         </div>
     </div>
 <script>
